[package]
name = "tempo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.1"
bytes = "1.6.0"
futures = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = "1.6.0"
hyper-rustls = { version = "0.27.1", features = [
    "http2",
    "webpki-tokio",
], optional = true }
hyper-tls = { version = "0.6.0", features = ["alpn"], optional = true }
hyper-tungstenite = "0.17.0"
hyper-util = { version = "0.1.11", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
    "server",
    "server-auto",
    "server-graceful",
] }
moka = { version = "0.12.7", features = ["future"] }
rand = "0.9.1"
rcgen = { version = "0.13.1", features = ["x509-parser"] }
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.12.0"
time = "0.3.36"
tokio = { version = "1.45.0", features = ["full"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-tungstenite = "0.26.0"
tracing = "0.1.40"
uuid = { version = "1.17.0", features = ["v4"] }
mimalloc = { version = "*" }
http-auth-basic = "0.3.3"
lazy_static = "1.4.0"
typed-builder = "0.21.0"

[features]
default = ["rust-tls"]
rust-tls = [
    "dep:tokio-rustls",
    "dep:hyper-rustls",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
native-tls = [
    "dep:tokio-native-tls",
    "dep:hyper-tls",
    "tokio-tungstenite/native-tls",
]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[example]]
name = "logger"
