[package]
name = "tempo"
version = "2025.10.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.12.1"
bytes = "1.11.0"
futures = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = "1.8.1"
hyper-rustls = { version = "0.27.7", features = [
    "http2",
    "webpki-tokio",
], optional = true }
hyper-tls = { version = "0.6.0", features = ["alpn"], optional = true }
hyper-tungstenite = "0.19.0"
hyper-util = { version = "0.1.19", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
    "server",
    "server-auto",
    "server-graceful",
] }
moka = { version = "0.12.12", features = ["future"] }
rand = "0.9.2"
rcgen = { version = "0.14.7", features = ["x509-parser"] }
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.14.0"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["full"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.26.3", optional = true }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }
mimalloc = { version = "*" }
http-auth-basic = "0.3.3"
lazy_static = "1.4.0"
typed-builder = "0.23.2"

[features]
default = ["rust-tls"]
rust-tls = [
    "dep:tokio-rustls",
    "dep:hyper-rustls",
    "tokio-tungstenite/rustls-tls-webpki-roots",
]
native-tls = [
    "dep:tokio-native-tls",
    "dep:hyper-tls",
    "tokio-tungstenite/native-tls",
]

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[[example]]
name = "logger"
